--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -1,30 +1,34 @@
-name: Daily Exjobb Data 
+name: Daily Exjobb Data Crawl
 
 on:
   schedule:
-    - cron: '0 2 * * *'  
+    - cron: '0 2 * * *'  # Runs daily at 02:00 UTC
+  workflow_dispatch:    # Allows manual triggering
 
 jobs:
   crawl:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'  
+          python-version: '3.12'  # Specify Python version
 
+      # Step 3: Install dependencies and Chrome
       - name: Install dependencies and Chrome
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget unzip
-          # 安装 Google Chrome
+          sudo apt-get install -y wget unzip xvfb libxi6 libgconf-2-4
+          # Install Google Chrome
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install -y ./google-chrome-stable_current_amd64.deb
-          # ChromeDriver
+          # Install ChromeDriver
           CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
           CHROME_MAJOR_VERSION=${CHROME_VERSION%%.*}
           wget -N https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_MAJOR_VERSION
@@ -33,19 +37,21 @@ jobs:
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
-          #  Python 
+          # Install Python dependencies
           python -m pip install --upgrade pip
-          pip install selenium pandas
+          pip install -r requirements.txt
 
+      # Step 4: Run the crawler script
       - name: Run crawler script
         run: |
           python liu_data.py
 
+      # Step 5: Commit and push changes
       - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data/exjobb_projects_selenium.csv  # data/ is the directory where the output file is saved
+          git add data/exjobb_projects_selenium.csv
           git commit -m "Daily update: $(date +'%Y-%m-%d')"
           git push
         env:
