--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -43,7 +43,8 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data/exjobb_projects.csv
+          git add data/liu_exjobb_projects.csv
+          git add data/kth_exjobb_projects.csv
           git commit -m "Daily update: $(date +'%Y-%m-%d')"
           git push
         env:
